--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@
 .panel-body.review-container {padding-top: 0;}
 .review-header {margin-bottom: 10px;}
 .reviewAuthor {margin: 0 5px;}
-.reviewTimestamp {color: #ccc;}
+.reviewTimestamp {color: #ffffff;}
 
 .label-facility {margin-right: 2px}
 .rating-stars {margin-left: 3px;}
